[package]
name = "synology"
version = "0.1.0"
edition = "2021"

[lib]
name = "synology"
path = "src/lib.rs"

[[bin]]
name = "synology"
path = "src/main.rs"

[features]
test-helpers = []

[dependencies]
regex = "1.11.2"
reqwest = "0.12.23"
serde = "1.0.225"
serde_json = "1.0.145"
serde_toml = "0.0.1"
tokio = { version = "1.47.1", features = ["fs", "macros", "net", "rt-multi-thread", "signal"] }
anyhow = "1.0.99"
toml = "0.9.6"
axum = "0.8.4"
log = "0.4.28"
uuid = { version = "1.18.1", features = ["v4"] }
thiserror = "2.0.16"
clap = { version = "4.5", features = ["derive"] }
daemonize = "0.5"
env_logger = "0.11"
